Added figures to the paper

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -109,3 +109,31 @@
   year={2019},
   publisher={Simon and Schuster}
 }
+
+@article{hoyer2017xarray,
+  title={xarray: ND labeled arrays and datasets in Python},
+  author={Hoyer, Stephan and Hamman, Joe},
+  journal={Journal of Open Research Software},
+  volume={5},
+  number={1},
+  pages={10--10},
+  year={2017}
+}
+
+@article{reback2020pandas,
+  title={pandas-dev/pandas: Pandas 1.0. 5},
+  author={Reback, Jeff and McKinney, Wes and Van Den Bossche, Joris and Augspurger, Tom and Cloud, Phillip and Klein, Adam and Hawkins, Simon and Roeschke, Matthew and Tratner, Jeff and She, Chang and others},
+  journal={Zenodo},
+  year={2020}
+}
+
+@article{harris2020array,
+  title={Array programming with NumPy},
+  author={Harris, Charles R and Millman, K Jarrod and Van Der Walt, St{\'e}fan J and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J and others},
+  journal={Nature},
+  volume={585},
+  number={7825},
+  pages={357--362},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
